--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h3>About me</h3>
     <p>Hi. My name is Emre. I'm from Turkey in Ankara city. I like watching science fiction, historical, political movies and documentaries.
         I especially love documentaries and movies about the second world war. My favorite documentary is The World at War. <br>
-        I started web development training as a hobby. As someone in her early 30s, it's insane.I hope I can turn this hobby into a passion. I would be happy to see you in the 'Kodluyoruz' family.
+        I started web development training as a hobby. As someone in her early 30s, it's insane.I hope I can turn this hobby into a passion. I would be happy to see you in the <a href="https://app.patika.dev/">Kodluyoruz</a>
+        family.
 </p> </p><!-- Paragraf etiketidir. Otomatik olarak satır atlatır. Sadece satır atlamak istersek <br> etiketini kullanabiliriz. -->
 
 <h2>My Favorite Documentaries</h2>
